--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <h1>How did we do?</h1>
     <p class="main-text">Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
     <div class="numbers flex" >
-      <p class="number">1</p>
-      <p class="number">2</p>
+      <p class="number" accesskey="1">1</p>
+      <p class="number" accesskey="2">2</p>
       <p class="number">3</p>
       <p class="number">4</p>
       <p class="number">5</p>
